# projet_equ_advection

./: CMakeLists.txt  Equation.cpp  Equation.h  IMesh.h  LaxWendroff.cpp  LaxWendroff.h  Plot.gp  Problem.cpp  Problem.h  README.md  Timer.cpp  Timer.h  UniformMesh.cpp  UniformMesh.h  Upwind.cpp  Upwind.h  Variable.cpp  Variable.h  main.cpp  tests.cpp
